test_suite5/ALAN/test_suite/alan-2022-examples/failing/004360_mutation.alan
source D begin leave; source leave end
